# doorstep

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
src/ltldoorstep/: artifact.py  config.py  context.py  document_utils.py  flask_server.py  ini.py  printer.py  processor.py  wamp_server.py
src/ltldoorstep/engines/: dask_threaded.py  docker.py  engine.py  openfaas.py  pachyderm.py
src/ltldoorstep/engines/openfaas_status/: ltl-openfaas-status.yml
src/ltldoorstep/engines/openfaas_status/ltl-openfaas-manage/: handler.py
src/ltldoorstep/engines/openfaas_status/ltl-openfaas-status/: handler.py
src/ltldoorstep/engines/pachyderm_proxy/: doorstep.json
src/ltldoorstep/reports/: report.py  tabular.py  tree.py
src/ltldoorstep/scripts/: ltldoorstep.py
tests/core/: test_metadata.py  test_printer.py
tests/core/engines/: test_dask_distributed.py  test_docker.py
tests/scripts/: test_ltldoorstep.py
