[build-system]
requires = ["hatchling < 1.22"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ltldoorstep"]

[tool.portray]
modules = ["ltldoorstep"]
extra_markdown_extensions = [
  "pymdownx.inlinehilite",
  "pymdownx.snippets",
  "pymdownx.highlight",
]

[tool.portray.pdocs]
exclude_source = true

[tool.portray.mkdocs]
markdown_extensions = [
  { "pymdownx.superfences" = {} }
]

[tool.ruff.lint]
select = ["D", "F", "B"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[project]
name = "ltldoorstep"
repository = "https://gitlab.com/lintol/doorstep"
readme = "README.md"
version = "0.4.0"
authors = [
  {name = "Phil Weir", email = "phil.weir@flaxandteal.co.uk"},
]
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    'Click>=7.0',
    'janus',
    'colorama',
    'dask',
    'distributed',
    'chardet<4.0',
    'unidecode',
    'tabulate',
    'flask>1.0',
    'flask_restful',
    'pandas',
    'boto3',
    'autobahn',
    'ckanapi',
    'requests',
    'docker',
    'retry',
    'minio',
    'aiohttp',
    'jsonpath-ng',
    'aiodocker'
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
test = [
    'pytest',
    'pytest-asyncio',
    'mock',
    'asynctest'
]
examples = ['shapely', 'piianalyzer', 'geojson_utils', 'geopandas']
babel-commands = ['Babel']
sphinx-commands = ['sphinx']

[project.scripts]
ltldoorstep = "ltldoorstep.scripts.ltldoorstep:cli"
